--- a/static/admin/picture-list.html
+++ b/static/admin/picture-list.html
@@ -25,7 +25,7 @@
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 图片管理 <span class="c-gray en">&gt;</span> 图片列表 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
 	
-	<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a class="btn btn-primary radius" onclick="addfood()" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加图片</a></span> <span class="r">共有数据：<strong>54</strong> 条</span> </div>
+	<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a class="btn btn-primary radius" onclick="picture_add('添加图片','picture-add.html')" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加料理</a></span> <span class="r">共有数据：<strong>54</strong> 条</span> </div>
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-hover table-sort">
 			<thead>
@@ -67,14 +67,6 @@
 <script type="text/javascript" src="lib/datatables/1.10.0/jquery.dataTables.min.js"></script> 
 <script type="text/javascript" src="lib/laypage/1.2/laypage.js"></script>
 <script type="text/javascript">
-// $('.table-sort').dataTable({
-// 	"aaSorting": [[ 1, "desc" ]],//默认第几个排序
-// 	"bStateSave": true,//状态保存
-// 	"aoColumnDefs": [
-// 	  //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-// 	  {"orderable":false,"aTargets":[0,8]}// 制定列不参与排序
-// 	]
-// });
 
 /*图片-添加*/
 function picture_add(title,url){
@@ -84,46 +76,6 @@ function picture_add(title,url){
 		content: url
 	});
 	layer.full(index);
-}
-
-/*图片-查看*/
-function picture_show(title,url,id){
-	var index = layer.open({
-		type: 2,
-		title: title,
-		content: url
-	});
-	layer.full(index);
-}
-
-/*图片-审核*/
-function picture_shenhe(obj,id){
-	layer.confirm('审核文章？', {
-		btn: ['通过','不通过'], 
-		shade: false
-	},
-	function(){
-		$(obj).parents("tr").find(".td-manage").prepend('<a class="c-primary" onClick="picture_start(this,id)" href="javascript:;" title="申请上线">申请上线</a>');
-		$(obj).parents("tr").find(".td-status").html('<span class="label label-success radius">已发布</span>');
-		$(obj).remove();
-		layer.msg('已发布', {icon:6,time:1000});
-	},
-	function(){
-		$(obj).parents("tr").find(".td-manage").prepend('<a class="c-primary" onClick="picture_shenqing(this,id)" href="javascript:;" title="申请上线">申请上线</a>');
-		$(obj).parents("tr").find(".td-status").html('<span class="label label-danger radius">未通过</span>');
-		$(obj).remove();
-    	layer.msg('未通过', {icon:5,time:1000});
-	});	
-}
-
-/*图片-下架*/
-function picture_stop(obj,id){
-	layer.confirm('确认要下架吗？',function(index){
-		$(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="picture_start(this,id)" href="javascript:;" title="发布"><i class="Hui-iconfont">&#xe603;</i></a>');
-		$(obj).parents("tr").find(".td-status").html('<span class="label label-defaunt radius">已下架</span>');
-		$(obj).remove();
-		layer.msg('已下架!',{icon: 5,time:1000});
-	});
 }
 
 /*图片-发布*/
@@ -136,15 +88,10 @@ function picture_start(obj,id){
 	});
 }
 
-/*图片-申请上线*/
-function picture_shenqing(obj,id){
-	$(obj).parents("tr").find(".td-status").html('<span class="label label-default radius">待审核</span>');
-	$(obj).parents("tr").find(".td-manage").html("");
-	layer.msg('已提交申请，耐心等待审核!', {icon: 1,time:2000});
-}
 
 /*图片-编辑*/
 function picture_edit(title,url,id){
+	window.localStorage.setItem('food',id)
 	var index = layer.open({
 		type: 2,
 		title: title,
@@ -197,7 +144,7 @@ function renderList(data){
 			<td>${data[i].desc}</td>
 			<td class="td-status"></td>
 			<td class="td-manage">
-				 <a style="text-decoration:none" class="ml-5" onClick="picture_edit('图库编辑','picture-add.html','10001')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a>
+				 <a style="text-decoration:none" class="ml-5" onClick="picture_edit('图库编辑','food-edit.html','${data[i]._id}')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a>
 				  <a style="text-decoration:none" class="ml-5" onClick="picture_del(this,'${data[i]._id}')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a>
 				  </td>
 		</tr>
@@ -206,6 +153,7 @@ function renderList(data){
 	}
 	$('#tbody').html(str)
 }
+
 function jump(type){
 	switch(type){
 		case 'first':
